# ALNetatmo

./: .gitignore  .netatmo.credentials  NetatmoPython.py  NetatmoWeatherStation.py  README.md  main.py  pyproject.toml
GUI/: Netatmo.ui
src/: __init__.py  netatmo_api.py  netatmo_auth.py  netatmo_db.py  netatmo_weather.py
src/ANetatmoWeather/: auth_code.txt  netatmo_api.py  netatmo_auth.py  netatmo_auth_handler.py  netatmo_db.py  netatmo_weather.py
